samples/_failures_safe/1761695686_47167f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f4bb152a.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_f4bb152a.c:186:13: error: expected expression at end of input
  186 |             if (graph->edges[i]->source == current && !
      |             ^~
./samples/SAFE/__tmp_f4bb152a.c:186:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f4bb152a.c:186:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f4bb152a.c:186:13: error: expected declaration or statement at end of input
